tests/e2e/object_int_index_invalid3.error
Error: syntax error in story at line 2, column 1

2|    a.b = true
      ^^^

E0104: `Map[int,boolean]` can't be indexed with `string`
